Fix Heading overlap in the container when its long

--- a/styles/main.css
+++ b/styles/main.css
@@ -120,6 +120,7 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  max-width: 100%;
 }
 .info-container h3 {
   font-size: 1rem;
